@@ -9,11 +9,12 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.pinterest:ktlint:0.48.2"
+    ktlint "com.pinterest.ktlint:ktlint-cli:1.6.0"
 }
 
 def ktlintJvmArgs = [
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
     "--add-opens=java.base/java.util=ALL-UNNAMED",
 ]
 
